# mes_detect_ball

./: CMakeLists.txt
GUITool/: CMakeLists.txt
GUITool/include/Label_handler/: LabelController.cpp  LabelController.h  show_label_window.cpp
GUITool/include/simulation_handler/: show_simulation_window.cpp
GUITool/include/windows_handler/: Controller.cpp  Controller.h
Model/: normalize.h
Model/adaboost/: adaboost.h
Model/logistic/: logistic.cpp  logistic.h
Training/: CMakeLists.txt  training.cpp
class_def/: adaboost_classifier.cpp  normalize.cpp  weak_learner.cpp
dataset/binary_data/: default_feature_bin.txt  default_label_bin.txt  feature_bin.txt  feature_num_bin.txt  label_bin.txt  label_num_bin.txt
dataset/dataset/: ball_test_x.txt  ball_train_y.txt  box_test_y.txt  box_train_y.txt  test_feature_bin_data.txt  test_test_feature.txt  test_test_label.txt  test_train_label.txt  tmp_feature_buffer_data  tmp_lable_buffer_data
dataset/default_data/: default_feature_data.txt  default_label_data.txt
dataset/raw_data/: mesball.txt
detection/: detect_node.cpp
include/: file_handler.cpp  file_handler.h  make_feature.cpp  make_feature.h  metric.cpp  metric.h
include/class_def/: normalize.cpp
include/dataset/: ball_test_x.txt  ball_test_xn_2.txt  ball_test_y.txt  ball_test_yn_2.txt  ball_train_x.txt  ball_train_xn_2.txt  ball_train_y.txt  ball_train_yn_2.txt  box_test_Yn.txt  box_test_x.txt  box_test_xn_2.txt  box_test_y.txt  box_test_yn_2.txt  box_train_x.txt  box_train_xn_2.txt  box_train_y.txt  box_train_yn_2.txt  test_Ball_Y.txt  test_feature_bin_data.txt  test_feature_data.txt  test_label_bin_data.txt  test_label_data.txt  test_train_feature.txt  tmp_feature_buffer_data  tmp_lable_buffer_data  train_Ball_X.txt  train_X.txt
include/header/: adaboost_classifier.h  bayes_filter.h  bayes_filter.txt  file_handler.cpp  file_handler.h  label.h  label.txt  load_matrix.h  make_feature.cpp  make_feature.h  metric.cpp  metric.h  normalize.h  segment.h  weak_learner.h  weak_learner_logistic.txt
include/mes_detect_ball/: Segment.h  load_matrix.h  make_feature.h  normalize.h  weak_learner.h
include/weight_data/: adaboost_ball_weight.txt  adaboost_box_weight.txt  adaboost_weight.txt  debug.txt
lib_def/: adaboost_classifier.cpp  normalize.cpp  weak_learner.cpp
mes_detect_ball/: CMakeLists.txt  package.xml
mes_detect_ball/include/dataset/: ball_test_xn_2.txt  ball_test_y.txt  ball_test_yn_2.txt  ball_train_y.txt  ball_train_yn_2.txt  box_test_Yn.txtZone.Identifier  box_test_x.txt  box_test_xn.txt  box_test_xn.txtZone.Identifier  box_test_y.txt  box_test_yn.txt  box_test_yn_2.txt  box_train_xn.txtZone.Identifier  box_train_yn.txtZone.Identifier  box_train_yn_2.txt  feat_test_X.txt
mes_detect_ball/include/header/: adaboost_classifier.h  confusion.h  feature_debug.txt  file_handler.h  make_feature.h  segment.h  weak_learner.h
mes_detect_ball/include/weight_data/: adaboost_ball_weight.txt  adaboost_box_weight.txt
mes_detect_ball/src/: detect_ball.cpp  detect_box.cpp  training_ball.cpp  training_box.cpp
mes_detect_ball_original_code/: CMakeLists.txt
mes_detect_ball_original_code/detection/: CMakeLists.txt  detect_ball.cpp  detect_box.cpp
mes_detect_ball_original_code/include/class_def/: adaboost_classifier.cpp  weak_learner.cpp
mes_detect_ball_original_code/include/dataset/: ball_test_x.txt  box_train_x.txt  box_train_xn.txt  box_train_y.txt  box_train_yn.txt  feat_test_Y.txt  feat_train_Y.txt
mes_detect_ball_original_code/include/header/: adaboost_classifier.h  bayes_filter.h  file_handler.h  label.h  make_feature.h
mes_detect_ball_original_code/include/mes_detect_ball/: adaboost_classifier.h  confusion.h  make_feature.h  normalize.h  segment.h
mes_detect_ball_original_code/include/weight_data/: adaboost_ball_weight.txt  adaboost_box_weight.txt  adaboost_weight.txt
mes_detect_ball_original_code/lib_def/: adaboost_classifier.cpp  normalize.cpp  weak_learner.cpp
mes_detect_ball_original_code/src/: detect_box.cpp  main.cpp  training_ball.cpp  training_box.cpp
rviz/: CMakeLists.txt  detect_node.cpp  package.xml  sample.cpp
simulation/: CMakeLists.txt  simulation_ball.cpp
simulation/include/: imgui_header.h
simulation/include/Label_handler/: LabelController.cpp  LabelController.h  label_animate_info.h
simulation/include/label_handler/: show_label_window.cpp  show_label_window.h
simulation/include/simulation_handler/: SimulationController.cpp  show_simulation_window.cpp  show_simulation_window.h
simulation/include/windows_control/: frame_handler.cpp  frame_handler.h  show_control_window.cpp  show_control_window.h
simulation/include/windows_handler/: Controller.cpp  Controller.h  animate_info.h  show_control_window.cpp
simulation/src/: simulation.cpp
src/: adaboost_classifier.cpp  detect_ball.cpp  detect_box.cpp  detect_node  detect_node.cpp  main.cpp  normalize.cpp  training_ball.cpp  training_box.cpp  weak_learner.cpp
